--- a/public/HomePage.html
+++ b/public/HomePage.html
@@ -154,7 +154,33 @@
         </ul>
       </aside>
     </div>
+
     <footer>
+      <div class = "footer-row">
+        <div class = "footer-col">
+          <h4>About</h4>
+          <ul class = "links">
+            <li><a href="#">Company</a></li>
+            <li><a href="#">Team</a></li>
+            <li><a href="#">Mission</a></li>
+          </ul>
+        </div>
+        <div class = "footer-col">
+          <h4>Contact Information</h4>
+          <ul class = "links">
+            <li><a href="#">Mail</a></li>
+            <li><a href="#">Phone:</a></li>
+            <li><a href="#">3</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h4>Schlusswort</h4>
+          <p>
+            I hope you enjoy our website. This website is still work and progress. New features might come in the future. Thank you!
+          </p>
+        </div>
+      </div>
+
       <p>&copy; 2024 Meine Firma. Alle Rechte vorbehalten.</p>
     </footer>
     <script src="js/HomePage.js"></script>
