--- a/public/TODOs.html
+++ b/public/TODOs.html
@@ -69,6 +69,12 @@
       <button type="button" name="listabbrechen" id="listabbrechen">Cancel</button>
     </form>
   </div>
+  <div id="addUserToListPopUp">
+    <div id="allAddedUsers">
+      <p>Philipp</p>
+      <p>Tim</p>
+    </div>
+  </div>
 
   <script src="js/addTask.js"></script>
   <script src="js/addList.js"></script>
