--- a/public/TODOs.html
+++ b/public/TODOs.html
@@ -76,8 +76,8 @@
       <p>Tim</p>
     </div>
     <div id="newUser">
-      <input type="text">
-      <button>Add</button>
+      <input type="text" id="newUsername">
+      <button type="button" onclick="addNewUser()">Add</button>
     </div>
     <button type="button" onclick="closeUserPopUp()">Cancel</button>
   </div>
