--- a/public/test.html
+++ b/public/test.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <button onclick = 'getTasks(1)'>Sign Up</button>
+    <button onclick = 'addUserToList(777,"tim, philipp")'>Sign Up</button>
 </body>
 
 </html>
