--- a/public/TODOs.html
+++ b/public/TODOs.html
@@ -38,7 +38,7 @@
       <div id="addTaskButton" class="Taskoption"> <!-- Hinzufügen einer Aufgabe in der ausgewählten Liste-->
         <button class="Addbuttontask" onclick='addTask()'>Add Task</button>
         <!-- Hinzufügen eines anderen Nutzers für die ausgewählten Liste-->
-        <button class="Addbuttonuser" onclick='addUser()'>Add User
+        <button class="Addbuttonuser" onclick='openUserMenu()'>User menu
         </button>
       </div>
          
@@ -56,7 +56,7 @@
       <label for="edate">Enddatum</label>
       <input type="datetime-local" name="edate" id="edate">
       <button type="button" name="taskSpeichern" id="taskSpeichern">Save</button>
-      <button type="button" name="taskabbrechen" id="taskabbrechen">Cancel</button>
+      <button type="button" onclick="closeTaskPopUp();">Cancel</button>
     </form>
   </div>
   <div id="addListPopUp"><!-- Pop Up für Erstellen einer neune Todo-Liste-->
@@ -66,7 +66,7 @@
       <label for="userlist">Benutzer</label>
       <input type="text" name="userlist" id="userlist"><br><br>
       <button type="button" name="listSpeichern" id="listSpeichern">Save</button>
-      <button type="button" name="listabbrechen" id="listabbrechen">Cancel</button>
+      <button type="button" onclick="closeListPopUp()">Cancel</button>
     </form>
   </div>
   <div id="addUserToListPopUp">
