--- a/public/TODOs.html
+++ b/public/TODOs.html
@@ -71,10 +71,7 @@
   </div>
   <div id="addUserToListPopUp">
     <p>All users</p>
-    <div id="allAddedUsers">
-      <p>Philipp</p>
-      <p>Tim</p>
-    </div>
+    <div id="allAddedUsers"></div>
     <div id="newUser">
       <input type="text" id="newUsername">
       <button type="button" onclick="addNewUser()">Add</button>
