--- a/public/team.html
+++ b/public/team.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles/team.css" />
     <link rel="stylesheet" href="styles/navbar.css">
     <link rel="stylesheet" href="styles/footer.css">
-    <title>Contact Information</title>
+    <title>Team Informationen</title>
   </head>
   <body>
     <nav class="navbar">
@@ -23,7 +23,7 @@
             <ul class="submenu">
               <li><a href="register.html">Register</a></li>
               <li><a href="team.html">Team</a></li>
-              <li><a href="#">Mission</a></li>
+              <li><a href="mission.html">Mission</a></li>
             </ul>
           </li>
           <li><a href="contact.html">Contact</a></li>
@@ -74,7 +74,7 @@
             <ul class="links">
               <li><a href="contact.html">Contact</a></li>
               <li><a href="team.html">Team</a></li>
-              <li><a href="#">Mission</a></li>
+              <li><a href="mission.html">Mission</a></li>
             </ul>
           </div>
           <div class="footer-col">
