--- a/public/TODOs.html
+++ b/public/TODOs.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/TODOs.css">
   <link rel="stylesheet" href="styles/general.css">
+  <link rel="stylesheet" href="styles/popUps.css">
   <link rel="stylesheet" href="styles/navbar.css">
   <link rel="stylesheet" href="styles/footer.css">
   <title>TODOs</title>
@@ -15,28 +16,28 @@
 
 <body onload="loadAllTaskLists(); loadUsername()">
   <!-- Kopfzeile mit Logo und Account Dartstellung-->
-    <nav class="navbar">
-      <div class="logo">
-        <img src="pictures/ToDo-neu.png" alt="" />
-      </div>
-      <div class="toggle-btn">
-        <div class="icon"></div>
-      </div>
-      <ul class="menu">
-        <li><a href="index.html">Home</a></li>
-        <li class="submenu-wrapper">
-          <a href="#">About<span> > </span> </a>
-          <ul class="submenu">
-            <li><a href="register.html">Register</a></li>
-            <li><a href="team.html">Team</a></li>
-            <li><a href="mission.html">Mission</a></li>
-          </ul>
-        </li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="login.html">Login</a></li>
-      </ul>
-    </nav>
-  
+  <nav class="navbar">
+    <div class="logo">
+      <img src="pictures/ToDo-neu.png" alt="" />
+    </div>
+    <div class="toggle-btn">
+      <div class="icon"></div>
+    </div>
+    <ul class="menu">
+      <li><a href="index.html">Home</a></li>
+      <li class="submenu-wrapper">
+        <a href="#">About<span> > </span> </a>
+        <ul class="submenu">
+          <li><a href="register.html">Register</a></li>
+          <li><a href="team.html">Team</a></li>
+          <li><a href="mission.html">Mission</a></li>
+        </ul>
+      </li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="login.html">Login</a></li>
+    </ul>
+  </nav>
+
   <div class="content"><!-- Aufbau der Todo Webseite mit Auswahl der Todo Liste und Präsentation der Liste-->
     <div class="listselection"><!-- Auswahl der Todo Liste-->
       <input type="button" class="Addbuttontasklist" value="+Add tasklist" onclick="addList()">
@@ -53,79 +54,94 @@
         <button class="Addbuttonuser" onclick='openUserMenu()'>User menu
         </button>
       </div>
-         
-      
+
+
       <div class="Tasklistcontent" id="taskContainer"> <!-- Inhalt der ausgewählten Liste-->
       </div>
     </div>
   </div>
-  <div id="addTaskPopUp"><!-- Pop Up für Erstellen einer neuen Aufgabe in der ausgewählten Liste-->
-    <form id="addTaskForm">
+
+
+  <<div id="addTaskPopUp" class="popUp"><!-- Pop Up für Erstellen einer neuen Aufgabe in der ausgewählten Liste-->
+    <h2>New Task</h2>
+    <form id="addTaskForm" class="popUpForm">
       <label for="taskname">Taskname</label>
       <input type="text" name="taskname" id="taskname">
-      <label for="sdate">Startdatum</label>
-      <input type="datetime-local" name="sdate" id="sdate">
       <label for="edate">Enddatum</label>
       <input type="datetime-local" name="edate" id="edate">
-      <button type="button" name="taskSpeichern" id="taskSpeichern">Save</button>
-      <button type="button" onclick="closeTaskPopUp();">Cancel</button>
+      <div class="popUpOptions">
+        <div name="taskSpeichern" id="taskSpeichern" class="submitPopUp">Save</div>
+        <div onclick="closeTaskPopUp();" class="cancelPopUp">Cancel</div>
+      </div>
     </form>
-  </div>
-  <div id="addListPopUp"><!-- Pop Up für Erstellen einer neune Todo-Liste-->
-    <form id="addListForm">
-      <label for="listname">listname</label>
-      <input type="text" name="listname" id="listname"><br><br>
-      <label for="userlist">Benutzer</label>
-      <input type="text" name="userlist" id="userlist"><br><br>
-      <button type="button" name="listSpeichern" id="listSpeichern">Save</button>
-      <button type="button" onclick="closeListPopUp()">Cancel</button>
-    </form>
-  </div>
-  <div id="addUserToListPopUp">
-    <p>All users</p>
-    <div id="allAddedUsers"></div>
-    <div id="newUser">
-      <input type="text" id="newUsername">
-      <button type="button" onclick="addNewUser()">Add</button>
     </div>
-    <button type="button" onclick="closeUserPopUp()">Cancel</button>
-  </div>
 
-  
-  <footer>
-    <div class="footer-row">
-      <div class="footer-col">
-        <h4>About</h4>
-        <ul class="links">
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="team.html">Team</a></li>
-          <li><a href="mission.html">Mission</a></li>
-        </ul>
+    <div id="addListPopUp" class="popUp"><!-- Pop Up für Erstellen einer neune Todo-Liste-->
+      <h2>New List</h2>
+      <form id="addListForm" class="popUpForm">
+        <label for="listname">Listname</label>
+        <input type="text" name="listname" id="listname">
+        <label for="userlist">Users (Comma seperated)</label>
+        <input type="text" name="userlist" id="userlist">
+        <div class="popUpOptions">
+          <div name="listSpeichern" id="listSpeichern" class="submitPopUp">Save</div>
+          <div onclick="closeListPopUp()" class="cancelPopUp">Cancel</div>
+        </div>
+      </form>
+    </div>
+
+    <div id="addUserToListPopUp" class="popUp">
+      <h3>All Users</h3>
+      <div id="allAddedUsers">
+        <p>Philipp</p>
+        <p>Tim</p>
+        <p>Dominik</p>
       </div>
-      <div class="footer-col">
-        <h4>Contact Information</h4>
-        <ul class="links">
-          <li>DHBW Ravensburg</li>
-          <li><a href="mailto:esc@dhbw-ravensburg.de">Mail: esc@dhbw-ravensburg.de</a></li>
-          <li><a href="tel:+4975118992172">Phone: +49 . 751/18999-2172</a></li>
-          <li><a href="http://www.ravensburg.dhbw.de">www.ravensburg.dhbw.de</a></li>
-        </ul>
+      <h3>Add a new user</h3>
+      <div id="newUser">
+        <input type="text" id="newUsername">
+        <div onclick="addNewUser()" class="submitPopUp">Add</div>
       </div>
-      <div class="footer-col">
-        <h4>Final words</h4>
-        <p>
-          I hope you enjoy our website. This website is still in work and
-          progress. New features might come in the future. Thank you!
-        </p>
+      <div class="popUpOptions">
+        <div onclick="closeUserPopUp()" class="cancelPopUp">Cancel</div>
       </div>
     </div>
 
-    <p>&copy; 2024 My Company. All rights reserved.</p>
-  </footer>
-  
 
-  <script src="js/addTask.js"></script>
-  <script src="js/addList.js"></script>
+    <footer>
+      <div class="footer-row">
+        <div class="footer-col">
+          <h4>About</h4>
+          <ul class="links">
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="team.html">Team</a></li>
+            <li><a href="mission.html">Mission</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h4>Contact Information</h4>
+          <ul class="links">
+            <li>DHBW Ravensburg</li>
+            <li><a href="mailto:esc@dhbw-ravensburg.de">Mail: esc@dhbw-ravensburg.de</a></li>
+            <li><a href="tel:+4975118992172">Phone: +49 . 751/18999-2172</a></li>
+            <li><a href="http://www.ravensburg.dhbw.de">www.ravensburg.dhbw.de</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h4>Final words</h4>
+          <p>
+            I hope you enjoy our website. This website is still in work and
+            progress. New features might come in the future. Thank you!
+          </p>
+        </div>
+      </div>
+
+      <p>&copy; 2024 My Company. All rights reserved.</p>
+    </footer>
+
+
+    <script src="js/addTask.js"></script>
+    <script src="js/addList.js"></script>
 </body>
 
 </html>
