--- a/public/TODOs.html
+++ b/public/TODOs.html
@@ -34,7 +34,12 @@
         </ul>
       </li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="login.html">Login</a></li>
+      <li><a href="login.html">
+          <div class="Account">
+            <div class="circle"></div>
+            <div id="username"></div>
+          </div>
+      </a></li>
     </ul>
   </nav>
 
@@ -62,7 +67,7 @@
   </div>
 
 
-  <<div id="addTaskPopUp" class="popUp"><!-- Pop Up für Erstellen einer neuen Aufgabe in der ausgewählten Liste-->
+  <div id="addTaskPopUp" class="popUp"><!-- Pop Up für Erstellen einer neuen Aufgabe in der ausgewählten Liste-->
     <h2>New Task</h2>
     <form id="addTaskForm" class="popUpForm">
       <label for="taskname">Taskname</label>
@@ -142,6 +147,7 @@
 
     <script src="js/addTask.js"></script>
     <script src="js/addList.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
