--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <body>
     <nav class="navbar">
       <div class="logo">
-        <img src="pictures/ToDo-neu.png" alt="" />
+        <img src="pictures/logo_no_slogan.png" alt="" />
       </div>
       <div class="toggle-btn">
         <div class="icon"></div>
@@ -35,7 +35,6 @@
       <img src="pictures/Bild 1.jpg" alt="Description of your image" />
       <div class="text-overlay">
         <h1>Arbeit organisieren leicht gemacht mit dieser TODO-Webseite!</h1>
-        <p>Additional text if needed</p>
       </div>
     </div>
 
@@ -126,6 +125,8 @@
         </div>
       </div>
     </div>
+
+    
 
     <div class="container">
       <div class="content">
