--- a/public/mission.html
+++ b/public/mission.html
@@ -11,7 +11,7 @@
   <body>
     <nav class="navbar">
       <div class="logo">
-        <img src="pictures/ToDo-neu.png" alt="" />
+        <img src="pictures/logo_no_slogan.png" alt="" />
       </div>
       <div class="toggle-btn">
         <div class="icon"></div>
