--- a/public/team.html
+++ b/public/team.html
@@ -63,6 +63,40 @@
 
       </div>
     </div>
+
+    <div class="container">
+      <div class="team-member">
+          <div class="image">
+              <img src="pictures/Bild2.jpg" alt="Team Member 1">
+          </div>
+          <div class="info">
+              <h2>Team Member 1</h2>
+              <p>Meet our talented team member who contributed to the development of this site.</p>
+              <ul>
+                  <li><strong>Name:</strong> John Doe</li>
+                  <li><strong>Role:</strong> Frontend Developer</li>
+                  <li><strong>Email:</strong> john@example.com</li>
+              </ul>
+          </div>
+
+      </div>
+
+      <div class="container">
+        <div class="team-member">
+            <div class="image">
+                <img src="pictures/Bild2.jpg" alt="Team Member 1">
+            </div>
+            <div class="info">
+                <h2>Dominik Kienle</h2>
+                <p>Meet our talented team member who contributed to the development of this site.</p>
+                <ul>
+                    <li><strong>Dominik:</strong> Kienle</li>
+                    <li><strong>Dashboard</strong> Frontend Developer</li>
+                    <li><strong>Email:</strong> kienle.dominik.03@gmail.com</li>
+                </ul>
+            </div>
+  
+        </div>
      
       
 
