--- a/public/mission.html
+++ b/public/mission.html
@@ -35,30 +35,29 @@
         <section class="mission1">
             <div class="mission-content">
               <section>
-                <h2>Funktionen:</h2>
+                <h2>Functions:</h2>
                 <ul>
-                    <li>Leichtere Benutzerfreundlichkeit: Mit unserer intuitiven Benutzeroberfläche kannst du mühelos
-                       Aufgaben erstellen, bearbeiten und organisieren. Wir arbeiten weiter daran, diese Funktionen
-                      noch benutzerfreundlicher zu gestalten</li>
-                    <li>Listen Abo: Du möchtest an die Entleerung der Mülltonnen durch die Müllabfuhr erinnerte werden
-                      und diese Aufgabe mit deinem Haushalt abgleichen, wir sind im Austauch und Erstellung
-                       einer Zugangssmöglichkeit für die Firmen, um die Termine der Firmen in eine
-                        To do Liste als einzelner Task zu implementieren. Diese Tasks können als Benutzer
-                        dann einer eigen erstellten To do Liste abonniert werden und werden sich selber
-                        aktualiesieren.
+                    <li>Easier to use: With our intuitive user interface, you can easily create, edit and organize tasks.
+                      create, edit and organize tasks. We are continuing to work on making these functions
+                     even more user-friendly</li>
+                    <li>List subscription: You would like to be reminded to empty the garbage cans by the waste collection service
+                      and synchronize this task with your household, we are in the process of exchanging and creating
+                       access possibility for the companies to implement the dates of the companies in a
+                        to do list as a single task. As a user, these tasks can
+                        subscribed to a self created to do list and will update themselves.
                     </li>
                 </ul>
             </section>
         
             <section>
-                <h2>Zukünftige Features:</h2>
+                <h2>Coming Features:</h2>
                 <ul>
-                    <li>Verbindung mit Smart Home Geräten: Integriere deine Aufgaben in deinen Alltag.
-                       Erhalte Benachrichtigungen auf deinen smarten Geräten und synchronisiere deine To-Do-Liste mit deinem Smart Home.</li>
-                    <li>Launch der Webseite als App: Behalte deine To-Do-Liste immer griffbereit, indem du unsere Webseite als App auf deinem Mobilgerät installierst.</li>
+                    <li>Connection with smart home devices: Integrate your tasks into your everyday life.
+                      Receive notifications on your smart devices and synchronize your to-do list with your smart home.</li>
+                    <li>Launch the website as an app: Keep your to-do list at your fingertips by installing our website as an app on your mobile device.</li>
                     
                     <br></br>
-                    <p>Wir freuen uns auf dein Feedback! Lass uns wissen, wie wir deine To-Do-Erfahrung verbessern können.</p>
+                    <p>We look forward to your feedback! Let us know how we can improve your To-Do experience.</p>
                   </ul>
             </section>
             </div>
