--- a/public/index.html
+++ b/public/index.html
@@ -144,10 +144,11 @@
         <div class="flex-content">
           <img src="pictures/productivity.png" alt="test" />
           <div class="flex-text">
-            <h4>100% Mehr Produktivität</h4>
+            <h4>Productivity:</h4>
             <p>
-              Ecosia nutzt 100% der Gewinne für Klima- und Umweltschutz, vor
-              allem für Baumpflanzprojekte auf der ganzen Welt.
+              Enhance your productivity with our intuitive task management system.
+               Stay organized, prioritize tasks, and achieve your goals efficiently.
+                Our platform provides features to streamline your workflow, helping you tackle both personal and professional tasks with ease.
             </p>
           </div>
         </div>
@@ -156,10 +157,9 @@
         <div class="flex-content">
           <img src="pictures/productivity.png" alt="test" />
           <div class="flex-text">
-            <h4>100% Mehr Produktivität</h4>
+            <h4>Integrability into Daily Life:</h4>
             <p>
-              Ecosia nutzt 100% der Gewinne für Klima- und Umweltschutz, vor
-              allem für Baumpflanzprojekte auf der ganzen Welt.
+              Seamlessly integrate our platform into your daily life. With a user-friendly interface and mobile accessibility, you can manage your tasks on the go. Whether you're at home, work, or on the move, our platform adapts to your lifestyle, ensuring you stay on top of your to-do list effortlessly.
             </p>
           </div>
         </div>
@@ -170,10 +170,9 @@
         <div class="flex-content">
           <img src="pictures/productivity.png" alt="test" />
           <div class="flex-text">
-            <h4>100% Mehr Produktivität</h4>
+            <h4>Collaborative Planning with Friends and Family:</h4>
             <p>
-              Ecosia nutzt 100% der Gewinne für Klima- und Umweltschutz, vor
-              allem für Baumpflanzprojekte auf der ganzen Welt.
+              Experience the power of collaborative planning by sharing your to-do lists with friends and family. Coordinate events, manage household chores, and plan activities together. Our platform fosters teamwork, making it simple for everyone to contribute and stay informed about shared responsibilities.
             </p>
           </div>
         </div>
@@ -182,10 +181,9 @@
         <div class="flex-content">
           <img src="pictures/productivity.png" alt="test" />
           <div class="flex-text">
-            <h4>100% Mehr Produktivität</h4>
+            <h4>Easy to Use:</h4>
             <p>
-              Ecosia nutzt 100% der Gewinne für Klima- und Umweltschutz, vor
-              allem für Baumpflanzprojekte auf der ganzen Welt.
+              Simplicity is at the core of our platform. Enjoy a hassle-free experience with an easy-to-use interface. Quickly create, edit, and mark tasks as completed. Whether you're tech-savvy or new to task management tools, our platform ensures a user-friendly environment for all. Get started with ease and make task management a breeze.
             </p>
           </div>
         </div>
