contact fertig team veränderung + neues bild

--- a/public/contact.html
+++ b/public/contact.html
@@ -37,12 +37,13 @@
                 <h2>Contact Us</h2>
                 <p>We're thrilled to hear from you. Whether you have questions, comments, or just want to say hello, we're here to help. Feel free to reach out to us using any of the methods below:</p>
                 <ul>
-                    <li><strong>Email:</strong> <a href="mailto:YourEmail@example.com">YourEmail@example.com</a></li>
-                    <li><strong>Phone:</strong> +1 (123) 456-7890</li>
+                    <li><strong>Email:</strong> <a href="mailto:esc@dhbw-ravensburg.de">esc@dhbw-ravensburg.de</a></li>
+                    <li><strong>Phone:</strong> Tel. +49 . 751 / 18999 - 2172 bzw. - 2141</li>
                     <li><strong>Address:</strong><br>
-                        123 Main Street,<br>
-                        Cityville, State,<br>
-                        Country, ZIP Code
+                      DHBW Ravensburg<br>
+                      Education Support Center (ESC)<br>
+                      Marienplatz 2<br>
+                      88212 Ravensburg
                     </li>
                 </ul>
                 <h3>Connect With Us</h3>
@@ -58,7 +59,7 @@
                 </p>
             </div>
             <div class="image">
-                <img src="pictures/Bild2.jpg" alt="Contact Image">
+                <img src="pictures/DHBW.jpg" alt="Contact Image">
             </div>
         </div>
       </div>
