--- a/public/team.html
+++ b/public/team.html
@@ -54,15 +54,15 @@
           <img src="pictures/Bild2.jpg" alt="Team Member 1" />
         </div>
         <div class="info">
-          <h2>Team Member 1</h2>
+          <h2>Tobias Stoppelkamp</h2>
           <p>
             Meet our talented team member who contributed to the development of
             this site.
           </p>
           <ul>
-            <li><strong>Name:</strong> John Doe</li>
+            <li><strong>Name:</strong> Tobias Stoppelkamp</li>
             <li><strong>Role:</strong> Frontend Developer</li>
-            <li><strong>Email:</strong> john@example.com</li>
+            <li><strong>Email:</strong> stoppelkamp05@gmail.com</li>
           </ul>
         </div>
       </div>
