--- a/public/index.html
+++ b/public/index.html
@@ -222,7 +222,7 @@
         <p>test</p>
       </a>
     </div>
-    
+
     <section class="main swiper mySwiper">
       <div class="wrapper swiper-wrapper">
         <div class="slide swiper-slide">
@@ -233,7 +233,7 @@
               Enjoy Our Exclusive <br />
               Coffee and Cocktails
             </h2>
-            <a href="#" class="button">About Us</a>
+            <a href="register.html" class="button">Register now!</a>
           </div>
         </div>
         <div class="slide swiper-slide">
@@ -244,7 +244,7 @@
               Coffee Beans with a <br />
               Perfect Aroma
             </h2>
-            <a href="#" class="button">About Us</a>
+            <a href="register.html" class="button">Register now!</a>
           </div>
         </div>
         <div class="slide swiper-slide">
@@ -255,7 +255,7 @@
               Alluring and Fragrant <br />
               Coffee Aroma
             </h2>
-            <a href="#" class="button">About Us</a>
+            <a href="register.html" class="button">Register now!</a>
           </div>
         </div>
       </div>
