--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <div class="image-container">
       <img src="pictures/Bild 1.jpg" alt="Description of your image" />
       <div class="text-overlay">
-        <h1>Arbeit organisieren leicht gemacht mit dieser TODO-Webseite!</h1>
+        <h1>Easily organise your Work with our Solution To-Do List!</h1>
       </div>
     </div>
 
@@ -135,14 +135,14 @@
     </div>
 
     <div class="header-flex">
-      <h2 class="section-header">Warum unsere Todo-Webseite nutzen?</h2>
-      <h3 class="section-sub-header">Unsere Versprechen</h3>
+      <h2 class="section-header">Why should you use our Website?</h2>
+      <h3 class="section-sub-header">We promise</h3>
     </div>
 
     <div class="flex-container-oben">
       <div class="flex-item">
         <div class="flex-content">
-          <img src="pictures/productivity.png" alt="test" />
+          <img src="pictures/productivity.jpg" alt="productivity" class ="pictures" />
           <div class="flex-text">
             <h4>Productivity:</h4>
             <p>
@@ -155,7 +155,7 @@
       </div>
       <div class="flex-item">
         <div class="flex-content">
-          <img src="pictures/productivity.png" alt="test" />
+          <img src="pictures/Integrateability.jpg" alt="Integreatability" class ="pictures" />
           <div class="flex-text">
             <h4>Integrability into Daily Life:</h4>
             <p>
@@ -168,7 +168,7 @@
     <div class="flex-container-unten">
       <div class="flex-item">
         <div class="flex-content">
-          <img src="pictures/productivity.png" alt="test" />
+          <img src="pictures/family.jpg" alt="family" class ="pictures"/>
           <div class="flex-text">
             <h4>Collaborative Planning with Friends and Family:</h4>
             <p>
@@ -179,7 +179,7 @@
       </div>
       <div class="flex-item">
         <div class="flex-content">
-          <img src="pictures/productivity.png" alt="test" />
+          <img src="pictures/easytouse.jpg" alt="easytouse" class ="pictures"/>
           <div class="flex-text">
             <h4>Easy to Use:</h4>
             <p>
@@ -195,23 +195,23 @@
     <div class="card-list">
       <a href="#" class="card-item">
         <img src="pictures/Bild2.jpg" alt="Card Image" />
-        <span class="listen">Listen erstellen</span>
-        <h3>Listen erstellen und bearbeiten</h3>
+        <span class="listen">Create a List</span>
+        <h3>Creating and change a list</h3>
         <p>
-          Mit dem Erstellen von Listen kann man Tasks noch einfach organisieren.
-          Du suchst einen Ort um anstehende Aufgaben oder deine Einkaufsliste
-          aufzuschreiben. Mit Listen kannst du dies ganz einfach organisieren
-          und machen.
+          You can easily organize tasks by creating lists.
+          You are looking for a place to write down upcoming tasks or your shopping list.
+          to write down. You can easily organize this with lists
+          and do it.
         </p>
       </a>
       <a href="#" class="card-item">
         <img src="pictures/Bild3.jpg" alt="Card Image" />
-        <span class="benutzer">Benutzeroberfläche</span>
-        <h3>Benutzerfreundliche Oberfläche.</h3>
+        <span class="benutzer">User interface</span>
+        <h3>User-friendly interface.</h3>
         <p>
-          Hinzufügen, Bearbeiten und Löschen von Tasks wird durch die intuitive
-          Benutzeroberfläche leicht gemacht. Die Aufgaben lassen sich mit
-          Startdatum und Enddatum näher kategorisieren.
+          Adding, editing and deleting tasks is made easy by the intuitive user
+          user interface. The tasks can be categorized with
+          categorized with start date and end date.
         </p>
       </a>
       <a href="#" class="card-item">
