--- a/public/index.html
+++ b/public/index.html
@@ -228,10 +228,10 @@
         <div class="slide swiper-slide">
           <img src="pictures/Bild3.jpg" alt="" class="image" />
           <div class="image-data">
-            <span class="text">Enjoy the finest coffee drinks.</span>
+            <span class="text">Starting with a ToDo List</span>
             <h2>
-              Enjoy Our Exclusive <br />
-              Coffee and Cocktails
+              Enjoy a organised <br />
+              day at work and home
             </h2>
             <a href="register.html" class="button">Register now!</a>
           </div>
@@ -241,8 +241,8 @@
           <div class="image-data">
             <span class="text">We really like what we do.</span>
             <h2>
-              Coffee Beans with a <br />
-              Perfect Aroma
+              Keep track <br />
+              on upcoming events
             </h2>
             <a href="register.html" class="button">Register now!</a>
           </div>
@@ -250,10 +250,10 @@
         <div class="slide swiper-slide">
           <img src="pictures/Bild 1.jpg" alt="" class="image" />
           <div class="image-data">
-            <span class="text">Making Our coffee with lover.</span>
+            <span class="text">Take us with you on your journeys!</span>
             <h2>
-              Alluring and Fragrant <br />
-              Coffee Aroma
+              Planning upcoming travels <br />
+              and keeping the oversight
             </h2>
             <a href="register.html" class="button">Register now!</a>
           </div>
