--- a/public/index.html
+++ b/public/index.html
@@ -194,7 +194,7 @@
 
 
     <div class="card-list">
-      <a href="#" class="card-item">
+      <a class="card-item">
         <img src="pictures/Bild2.jpg" alt="Card Image" />
         <span class="listen">Create a List</span>
         <h3>Creating and change a list</h3>
@@ -205,7 +205,7 @@
           and do it.
         </p>
       </a>
-      <a href="#" class="card-item">
+      <a class="card-item">
         <img src="pictures/Bild3.jpg" alt="Card Image" />
         <span class="benutzer">User interface</span>
         <h3>User-friendly interface.</h3>
@@ -215,7 +215,7 @@
           categorized with start date and end date.
         </p>
       </a>
-      <a href="#" class="card-item">
+      <a class="card-item">
         <img src="pictures/editor.jpg" alt="Card Image" />
         <span class="editor">Editor</span>
         <h3>An "editor" ensures content quality and accuracy.</h3>
