--- a/public/contact.html
+++ b/public/contact.html
@@ -52,7 +52,8 @@
                     <li><a href="https://twitter.com/YourTwitterHandle">Twitter</a></li>
                     <li><a href="https://instagram.com/YourInstagramHandle">Instagram</a></li>
                 </ul>
-                <p><strong>Business Hours:</strong><br>
+                <h4>Business Hours:</h4>
+                <p>
                     Monday - Friday: 9:00 AM - 5:00 PM<br>
                     Saturday: 10:00 AM - 2:00 PM<br>
                     Sunday: Closed
