änderungen an title und javascript bei swiper

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/navbar.css" />
     <link rel="stylesheet" href="styles/footer.css" />
     <link rel="stylesheet" href="styles/swiper-bundle.min.css" />
-    <title>Homepage work in progress</title>
+    <title>Homepage</title>
   </head>
   <body>
     <nav class="navbar">
@@ -75,6 +75,7 @@
 
     <!-- Swiper JS -->
     <script src="js/swiper-bundle.min.js"></script>
+    <script src="js/initswiper.js"></script>
     
     <div class="container">
       <div class="content">
