--- a/public/mission.html
+++ b/public/mission.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles/mission.css" />
   <link rel="stylesheet" href="styles/navbar.css">
   <link rel="stylesheet" href="styles/footer.css">
-  <title>Mission page work in progress</title>
+  <title>Mission</title>
 </head>
 
 <body>
