--- a/public/register.html
+++ b/public/register.html
@@ -4,6 +4,7 @@
 <head>
   <link rel="stylesheet" href="styles/general.css">
   <link rel="stylesheet" href="styles/register.css">
+  <link rel="icon" type="image/png" href="pictures/icon.png">
   <title>Registration Form</title>
   <script defer src="js/register.js"></script>
 </head>
