--- a/public/TODOs.html
+++ b/public/TODOs.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="styles/popUps.css">
   <link rel="stylesheet" href="styles/navbar.css">
   <link rel="stylesheet" href="styles/footer.css">
+  <link rel="icon" type="image/png" href="pictures/icon.png">
   <title>TODOs</title>
 
   <script src="js/dashboard.js"></script>
