--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/navbar.css" />
     <link rel="stylesheet" href="styles/footer.css" />
     <link rel="stylesheet" href="styles/swiper-bundle.min.css" />
+    <link rel="icon" type="image/png" href="pictures/icon.png">
     <title>Homepage</title>
   </head>
   <body>
