--- a/public/login.html
+++ b/public/login.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/general.css">
   <link rel="stylesheet" href="styles/login.css">
+  <link rel="icon" type="image/png" href="pictures/icon.png">
   <script defer src="js/login.js"></script>
   <title>Login</title>
 </head>
