--- a/public/mission.html
+++ b/public/mission.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles/mission.css" />
   <link rel="stylesheet" href="styles/navbar.css">
   <link rel="stylesheet" href="styles/footer.css">
+  <link rel="icon" type="image/png" href="pictures/icon.png">
   <title>Mission</title>
 </head>
 
