--- a/public/team.html
+++ b/public/team.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles/team.css" />
     <link rel="stylesheet" href="styles/navbar.css" />
     <link rel="stylesheet" href="styles/footer.css" />
+    <link rel="icon" type="image/png" href="pictures/icon.png">
     <title>Team Informationen</title>
   </head>
   <body>
